--- a/app/views/songs/search.html.erb
+++ b/app/views/songs/search.html.erb
@@ -1,6 +1,6 @@
 
 <% @songs.each do |song| %>
-  <div class="twelve columns" >
+  <div class="four columns search_song" >
     <div class="three columns">
       <h2> <%= song[:title]  %></h2>
     </div>
