--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,26 +1,31 @@
+<div class="sixteen columns title">
 <h1>Tunr</h1>
+</div>
 <form action="/songs/search" method="get">
   <input type="text" name="search_term" placeholder="...search for a song">
   <input type="submit">
 </form>
 
 <% @songs.each do |song| %>
-<div>
-  <img src="<%= song.artwork_url %>" alt="">
-
-  <h3>
-    <%= song.title %>
-  </h3>
-
-  <audio controls src="<%= song.preview_link %>"></audio>
-
-  <form action="/songs/<%= song.id %>" method="post">
-    <input type="hidden" name="_method" value="delete">
-    <%= token_tag %>
-    <button type='submit'>
-      <i class="fa fa-trash-o"></i>
-    </button>
-  </form>
-
+<div class="six columns play_song">
+  <div class="two column">
+    <img src="<%= song.artwork_url %>" alt="">
+  </div>
+    <div class="three columns">
+        <h3>
+          <%= song.title %>
+        </h3>
+      </div>
+      <div class="four column">
+        <audio controls src="<%= song.preview_link %>"></audio>
+      </div>
+        <form action="/songs/<%= song.id %>" method="post">
+          <input type="hidden" name="_method" value="delete">
+          <%= token_tag %>
+          <button type='submit'>
+            <i class="fa fa-trash-o"></i>
+          </button>
+        </form>
+  
 </div>
 <% end %>
